compiler/tests/success/x86-64/array_add.jazz
export fn test (reg u64 x) -> reg u64 {
  stack u64[2] t;
  reg u64 p r;
  t[0] = 0;
  t[1] = 1;
  p = 0;
  r = t[(int)p + 1];
  return r;
}