compiler/tests/fail/array_expansion/x86-64/out-of-bounds.jazz
export
fn test() -> reg u64 {
  reg u64 x;
  reg u64[1] t;
  t[-1] = 42;
  x = t[-1];
  return x;
}
